syntax = "proto3";
package kmi;
option go_package = "pb";

service KMIService {
  rpc AddKMI (AddKMIRequest) returns (AddKMIResponse);
  rpc RemoveKMI (RemoveKMIRequest) returns (RemoveKMIResponse);
  rpc GetKMI (GetKMIRequest) returns (GetKMIResponse);
  rpc KMI (KMIRequest) returns (KMIResponse);
}

enum Type {
  WEBSERVER = 0;
}

message KMDI {
  uint32 ID = 1;
  string name = 2;
  string version = 3;
  string description = 4;
  Type type = 5;
}

message FrontendModule {
  string template = 1;
  map<string, string> parameters = 2;
}

message KMI {
  KMDI KMDI = 1;
  string provisionScript = 2;
  string context = 3;
  map<string, string> commands = 4;
  map<string, string> environment = 5;
  repeated FrontendModule frontend = 6;
  repeated string imports = 7;
  map<string, string> interfaces = 8;
  map<string, string> resources = 9;
}

message AddKMIRequest {
  string path = 1;
}

message AddKMIResponse {
  uint32 ID = 1;
  string error = 2;
}

message RemoveKMIRequest {
  uint32 ID = 1;
}

message RemoveKMIResponse {
  string error = 1;
}

message GetKMIRequest {
  uint32 ID = 1;
}

message GetKMIResponse {
  KMI kmi = 1;
  string error = 2;
}

message KMIRequest{

}

message KMIResponse {
  repeated KMDI kmdi = 1;
  string error = 2;
}
